# raft-kv

./: CMakeLists.txt  Dockerfile  README.md  client.py  docker-compose.yml  raft.proto  raft_pb2.py  raft_pb2_grpc.py
src/: RaftNode.cpp  RaftNode.h  main.cpp
